--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,8 +17,9 @@ jobs:
       run: |
         git clone https://github.com/simonvetter/influxdb.git
         cd influxdb
-        git checkout origin/1.8.9+big_db_32bit
+        git checkout origin/1.8.10+big_db_32bit
         mkdir build
+        go build -o build/influx_stress cmd/influx_stress/*.go
         go build -o build/influx_tools cmd/influx_tools/*.go
         go build -o build/influx_inspect cmd/influx_inspect/main.go
         go build -o build/influxd cmd/influxd/main.go
